scripts/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    team: devops
    project: training
