scripts/04_db_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deploy
  namespace: dev
  labels:
    app: db
    team: devops
    project: training
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
        team: devops
        project: training
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
          name: postgres
