scripts/06_worker_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deploy
  namespace: dev
  labels:
    app: worker
    team: devops
    project: training
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
        team: devops
        project: training
    spec:
      enableServiceLinks: false
      containers:
      - name: worker
        image: schoolofdevops/worker:v1
