scripts/07_result_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deploy
  namespace: dev
  labels:
    app: result-app
    team: devops
    project: training
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result-app
  template:
    metadata:
      labels:
        app: result-app
        team: devops
        project: training
    spec:
      enableServiceLinks: false
      containers:
      - name: result-container
        image: schoolofdevops/result:v1
        ports:
        - containerPort: 8080
          name: web
