scripts/03_redis_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: dev
  labels:
    team: devops
    project: training
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
