scripts/04_db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: dev
  labels:
    team: devops
    project: training
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
