scripts/05_voting_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-service
  namespace: dev
  labels:
    team: devops
    project: training
spec:
  type: NodePort
  selector:
    app: voting-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 31000
