scripts/07_result_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: dev
  labels:
    team: devops
    project: training
spec:
  type: NodePort
  selector:
    app: result-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 31001
